# tempuhs-server

./: API.txt  Setup.hs  tempuhs-server.cabal
docs/: DELETE.txt  GET.txt  LAWS.txt  PATCH.txt  POST.txt  PUT.txt  notes.txt
prop/: Prop.hs
prop/Tempuhs/Props/: Instances.hs  Timespan.hs
prop/Tempuhs/Props/Timespan/: Laws.hs  Props.hs
src-exec/: Main.hs
src/Tempuhs/: Server.hs
src/Tempuhs/Server/: CLI.hs  DELETE.hs  Database.hs  GET.hs  Output.hs  POST.hs  Param.hs  Requests.hs  Spock.hs
src/Tempuhs/Server/Laws/: Props.hs  Timespan.hs
src/Tempuhs/Server/Requests/: Clock.hs  Meta.hs  Permissionset.hs  Role.hs  Timespan.hs  User.hs
src/Tempuhs/Server/Requests/Attributes/: Mono.hs  Poly.hs
src/Tempuhs/Server/Requests/Timespan/: Attributes.hs  Util.hs
test/: DELETE.hs  GET.hs  POST.hs  Spec.hs  Spoc.hs
test/Spoc/: Assert.hs  Default.hs  Entity.hs  Init.hs  JSON.hs  Request.hs  Type.hs
test/Tempuhs/: Spoc.hs
test/Tempuhs/Spoc/: Assert.hs  Default.hs  Entity.hs  Init.hs  JSON.hs  Request.hs  Type.hs
test/Tempuhs/Tests/Requests/: Clock.hs  DELETE.hs  Meta.hs  Permissionset.hs  Role.hs  Timespan.hs  User.hs
