name:                tempuhs-server
version:             0.0.0
synopsis:            Chronology server
description:         This is the server for the tempuhs chronicler.
homepage:            https://secure.plaimi.net/works/tempuhs
license:             AGPL-3
license-file:        LICENSE
author:              plaimi
maintainer:          tempuhs@plaimi.net
copyright:           (c) plaimi 2014
category:            Time
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Tempuhs.Server, Tempuhs.Server.CLI
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.6 && <4.7,
                       bytestring >=0.10 && <0.11,
                       optparse-applicative >=0.8 && <0.9,
                       persistent >=1.3 && <1.4,
                       persistent-postgresql >=1.3 && <1.4,
                       scotty >=0.7 && <0.8,
                       tempuhs >=0.0 && <0.1,
                       text >=1.1 && <1.2,
                       transformers >=0.3 && <0.5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tempuhs-server
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7,
                       tempuhs-server
  hs-source-dirs:      src-exec
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.6 && <4.7,
                       bytestring >=0.10 && <0.11,
                       hspec >=1.9 && <1.11,
                       http-types >=0.8 && <0.9,
                       HUnit >=1.2 && <1.3,
                       persistent >=1.3 && <1.4,
                       persistent-sqlite >=1.3 && <1.4,
                       plailude >=0.1 && <0.2,
                       scotty >=0.7 && <0.8,
                       silently >=1.2 && <1.3,
                       tempuhs >=0.0 && <0.1,
                       tempuhs-server,
                       text >=1.1 && <1.2,
                       transformers >=0.3 && <0.5,
                       wai >=2.1 && <2.2,
                       wai-test >=2.0 && <2.1
  hs-source-dirs:      test
  default-language:    Haskell2010
