name:                tempuhs-server
version:             0.0.0
synopsis:            Chronology server
description:         This is the server for the tempuhs chronicler.
homepage:            https://secure.plaimi.net/works/tempuhs
license:             AGPL-3
license-file:        LICENSE
author:              plaimi
maintainer:          tempuhs@plaimi.net
copyright:           (c) plaimi 2014
category:            Time
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Tempuhs.Server
                       Tempuhs.Server.CLI
                       Tempuhs.Server.Database
                       Tempuhs.Server.DELETE
                       Tempuhs.Server.GET
                       Tempuhs.Server.POST
                       Tempuhs.Server.Param
                       Tempuhs.Server.Spock
  other-extensions:    FlexibleContexts
                       OverloadedStrings
  build-depends:       aeson >=0.7 && <0.9,
                       base >=4.6 && <4.8,
                       bytestring >=0.10 && <0.11,
                       esqueleto >=2.0 && <2.2,
                       exceptions >=0.6 && <0.7,
                       monad-logger >=0.3 && <0.4,
                       old-locale >=1.0 && <1.1,
                       optparse-applicative >=0.11 && <0.12,
                       persistent >=2.0 && <2.2,
                       persistent-postgresql >=2.0 && <2.2,
                       plailude >=0.4.1 && <0.5.0,
                       resourcet >=1.1 && <1.2,
                       scotty >=0.7 && <0.10,
                       tempuhs >=0.0 && <0.1,
                       text >=1.1 && <1.3,
                       time >=1.4 && <1.5,
                       transformers >=0.3 && <0.5,
                       wai >=3.0 && <3.1,
                       warp >=3.0 && <3.1
  hs-source-dirs:      src
  default-language:    Haskell2010

executable tempuhs-server
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.8,
                       tempuhs-server
  hs-source-dirs:      src-exec
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       DELETE
                       GET
                       POST
                       Spoc
                       Spoc.Assert
                       Spoc.Default
                       Spoc.Entity
                       Spoc.Init
                       Spoc.JSON
                       Spoc.Request
                       Spoc.Type
  other-extensions:    FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       MultiParamTypeClasses
                       OverloadedStrings
  build-depends:       aeson >=0.7 && <0.9,
                       base >=4.6 && <4.8,
                       containers >=0.5.5 && <0.5.6,
                       bytestring >=0.10 && <0.11,
                       hspec >=1.9 && <1.13,
                       http-types >=0.8 && <0.9,
                       HUnit >=1.2 && <1.3,
                       lens >= 4.4 && <4.5,
                       monad-logger >=0.3 && <0.4,
                       persistent >=2.0 && <2.2,
                       persistent-sqlite >=2.0 && <2.2,
                       plailude >=0.4.1 && <0.5.0,
                       scotty >=0.7 && <0.10,
                       silently >=1.2 && <1.3,
                       stringable >=0.1.3 && <0.2,
                       tempuhs >=0.0 && <0.1,
                       tempuhs-server,
                       text >=1.1 && <1.3,
                       time >=1.4 && <1.5,
                       transformers >=0.3 && <0.5,
                       wai >=3.0 && <3.1,
                       wai-extra >=3.0 && <3.1
  hs-source-dirs:      test
  default-language:    Haskell2010
